# tiny_qa_benchmark_pp

./: .gitignore  CITATION.cff  LICENCE.data_packs.md  README.md  README_es.md  README_fr.md  README_hg.md  README_ja.md  README_zh.md
.github/: FUNDING.yml
.github/workflows/: publish-hf-dataset.yml  publish-pypi.yml
data/: README.md
data/core_en/: README.md  core_en.json  core_en_open-ai-eval.jsonl
data/packs/: LICENCE  README.md  pack_ar_40.json  pack_de_40.json  pack_en_10.json  pack_en_20.json  pack_en_30.json  pack_en_40.json  pack_es_40.json  pack_fr_40.json  pack_ja_40.json  pack_ko_40.json  pack_pt_40.json.json  pack_ru_40.json  pack_tr_40.json  pack_zh-CN_40.json  pack_zh-Hant_40.json  sup-ancientlang_en_10.json  sup-medicine_en_10.json
intergrations/: README.md
intergrations/openai-evals/: README.md  convert_tqb_to_evals_format.py  core_en.yaml  pack_ar_40.yaml  pack_de_40.yaml  pack_en_10.yaml  pack_en_20.yaml  pack_en_30.yaml  pack_en_40.yaml  pack_es_40.yaml  pack_fr_40.yaml  pack_ja_40.yaml  pack_ko_40.yaml  pack_pt_40.yaml  pack_ru_40.yaml  pack_tr_40.yaml  pack_zh_cn_40.yaml  pack_zh_hant_40.yaml  sup_ancientlang_en_10.yaml  sup_medicine_en_10.yaml
intergrations/opik/: README.md  opik-dataset.py
metadata/: croissant.json
paper/evaluation_results/: core_en__gemma-3-12b.json  core_en__gemma-3-4b.json  core_en__llama-3.2-1b-instruct.json  core_en__llama-3.2-3b-instruct.json  core_en__ministral-3b.json  (+76 more)
tools/generator/: README.md  __init__.py  core.py  pyproject.toml
tools/generator/tinyqabenchmarkpp/: __init__.py  generate.py
(+5 files in other folders)
